Atualização do index.html
Pequena atualização do index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <script src="scripts.js"></script>
-    <title>SGS - Previsão do Tempo</title>
+    <title>Previsão do Tempo</title>
 </head>
 
 <body>
@@ -21,14 +21,14 @@
         </button>
 
         <div class="medium-box">
-            <h2 class="city-title">Temperatura em </h2>
-            <p class="temperature"> °C</p>
-
+            <h2 class="city-title">Temperatura em: </h2>
+            <p class="temp-min"></p>
+            <p class="temp-max"></p>
             <div class="minor-box">
                 <img class="img-prev" src="https://openweathermap.org/img/wn/04n.png">
                 <p class="prev"> </p>
             </div>
-            <p class="moisture">Umidade do ar: </p>
+            <p class="moisture"></p>
         </div>
     </div>
 </body>
